HopByHopHeaders: ASCII-correct case-insensitive matching
Use Netty AsciiString for hop-by-hop name comparison (pure-ASCII
lowercasing, no Locale dependence) and guava Splitter/ImmutableSet for
parsing the Connection token list; Collectors.toSet() dedupes tokens.
Behaviour unchanged.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>